modified education section and corresponding styling

--- a/index.html
+++ b/index.html
@@ -103,26 +103,36 @@
 
         </section>
 
-        <!--EDUCATION-->
+        <!-- EDUCATION -->
         <section id="edu" class="edu">
-            <h2>Education</h2>
-            <div class="edudetails">
-                <ul class="edulist">
-                    <li>Kwantlen Polytechnic University - Information Technology, Bachelor of Technology</li>
-                    <li>Langara College - Computer Science, Associate of Science</li>
-                </ul>
-            </div>
+            <div class="container">
+                <h2 class="text-center mb-4">Education</h2>
+                <div class="row justify-content-center">
+                    <div class="col-md-10 col-lg-8">
+                        <div class="edulist card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Bachelor of Technology -- Information Technology</h5>
+                                <p class="card-text">Kwantlen Polytechnic University, Surrey, Canada. 2023-2025</p>
+                            </div>
+                        </div>
 
+                        <div class="edulist card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Associate of Science -- Computer Science</h5>
+                                <p class="card-text">Langara College, Vancouver, Canada. 2020-2022</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
     </main>
 
     <footer>
-
         <a href="#" class="back-to-top">
             <i class="bi bi-arrow-up-circle-fill"></i> Back to Top</a>
-
     </footer>
 </body>
 
